--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -1,9 +1,34 @@
 .content {
     position: absolute;
-    top: 300px;
-    left: 0;
+    top: 230px;
     width: 100%;
     text-align: center;
-    background-color: white;
-    color: white;
+    height: 65vh;
+    background-color: #FFF7F2;
+    color: #6a2305;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
+
+  .header-journeys{
+    color: #eb601f;
+  }
+
+  .header-filtered-journeys{
+    color: #eb601f;
+  }
+
+  .label-journeys{
+    color: #6a2305;
+  }
+  .content-filter{
+    padding-top: 3%;
+  }
+  .table-journeys{
+    text-align: center;
+  }
+
+
+
+ 
