--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,14 +1,11 @@
 .header {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 1%;
     width: 100%;
     text-align: center;
     background-color: #FFFFFF;
     color: white;
   }
 
-  .link{
-   text-decoration: none;
-  }
+ 
 
