--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -1,10 +1,10 @@
 .content {
     position: absolute;
-    top: 230px;
+    top: 135px;
     width: 100%;
     text-align: center;
     height: 65vh;
-    background-color: #FFF7F2;
+    background-color: white;
     color: #6a2305;
     display: flex;
     align-items: center;
@@ -27,6 +27,11 @@
   }
   .table-journeys{
     text-align: center;
+  }
+
+  .search{
+  display: flex;
+  flex-direction: row;
   }
 
 
